--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -10,7 +10,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+    - name: checkout
+      run: |
+        bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/updateFork.sh) https://github.com/apple/swift-protobuf
