--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -13,3 +13,7 @@ jobs:
     - name: checkout
       run: |
         bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/updateFork.sh) https://github.com/apple/swift-protobuf
+        bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/checkoutReleaseTag.sh) apple/swift-protobuf
+        bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/createCarthageFramwork.sh)
+        bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/submitCarthageRelease.sh) apple/swift-protobuf
+        
