--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   create-release:
 
-    runs-on: macos-latest
+    runs-on: macos-10.15
 
     steps:
     - uses: actions/checkout@v2
@@ -21,6 +21,8 @@ jobs:
         bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/checkoutReleaseTag.sh) apple/swift-protobuf
 
     - name: make framwwork
+      env:
+        DEVELOPER_DIR: /Applications/Xcode_11_4_1.app/Contents/Developer
       run: |
         bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/createCarthageFramwork.sh)
 
