--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: make framwwork
         env:
-          DEVELOPER_DIR: /Applications/Xcode_11_4_1.app/Contents/Developer
+          DEVELOPER_DIR: /Applications/Xcode_11.app/Contents/Developer
         run: |
           bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/createCarthageFramwork.sh)
 
