--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -20,6 +20,8 @@ jobs:
           bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/checkoutReleaseTag.sh) apple/swift-protobuf
 
       - name: make framwwork
+        env:
+          DEVELOPER_DIR: /Applications/Xcode_11.4.1.app/Contents/Developer
         run: |
           ls -n /Applications/ | grep Xcode*
           bash <(curl --silent https://raw.githubusercontent.com/billypchan/iosGitHubTools/master/scripts/createCarthageFramwork.sh)
